--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,14 +11,14 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?238708300" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4153927571" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Ibr6sydtNFHjH3ZC1G0elT6T9Pn2SvlvYeqO-P1kqM9feGCgf5rzVsJGwQM3FQ9uwmvuFRMkFRFK526352ZqjRmqZRSDjQbXjD6tFRwuZcJowyG8iemydWF3dasTZc88SKoRdhXCHKoXZABlSagzie8c-AmkOcFzdPJsj14ydcszdKu1ScNXZWFUiA97fbKr9gMMeM96MKG4fOUbIMMjMkMfP6sFiWF8qMYJXThDgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/pTJXKlChilF2-_gGU8TpBZ-eFGhiBS0uwLFPgg3_cr3feGCgf5rzVsJGwQM3FQ9uwmvuFRMkFRFK526352ZqjRmqZRSDjQbXjD6tFRwuZcJowyG8iemydWF3dasTZc88SKoRdhXCHKoXZABlSagzie8c-AmkOcFzdPJsj14ydcszdKu1ScNXZWFUiA97fbKr9gMMeM96MKG4fOUbIMMjMkMfP6sFiWF8qMe7EZhDgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -93,8 +93,28 @@
       <p>Bob use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario</p>
      </div>
     </div>
+    <div class="clearfix colelem" id="pu192"><!-- group -->
+     <div class="rounded-corners clearfix grpelem" id="u192"><!-- group -->
+      <div class="grpelem" id="u190"><!-- custom html -->
+       <input id="bobInput" placeholder="search the name of an artist" style="width:300px; height:25px"/>
+</div>
+      <div class="Button rounded-corners clearfix grpelem" id="buttonu199"><!-- container box -->
+       <div class="clip_frame grpelem" id="u203"><!-- image -->
+        <img class="block" id="u203_img" src="images/search.png" data-hidpi-src="images/search_2x.png" alt="" width="27" height="27"/>
+       </div>
+      </div>
+     </div>
+     <div class="Button rounded-corners clearfix grpelem" id="buttonu212"><!-- container box -->
+      <div class="clip_frame grpelem" id="u206"><!-- image -->
+       <img class="block" id="u206_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="37" height="37"/>
+      </div>
+      <div class="clearfix grpelem" id="u215-4"><!-- content -->
+       <p>add all to playlist</p>
+      </div>
+     </div>
+    </div>
     <div class="clearfix colelem" id="u184-4"><!-- content -->
-     <p>Results</p>
+     <p>results</p>
     </div>
     <div class="clearfix colelem" id="pu166"><!-- group -->
      <div class="grpelem" id="u166"><!-- simple frame --></div>
