Additional input added for 2nd scenario, layout tweaks

--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,7 +11,7 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4162748491" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3898565876" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -22,7 +22,7 @@ var __adobewebfontsappname__ = "muse";
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/asap:n7,n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Nx_P0wmr5IXgbdzyxGNtJauh7bWLV-Fpv1VseXkOni6feGMgf5rzVsJGwQM3FQ9uwmvuFeZcwD4RwRB8FRFKZRbXFD88FDMDFRyqFQI3jRqXwyG8iemydWF3dasTZc88SKoRdhXCHKoXZABlSagzie8c-AmkOcFzdPJsj14ydcszdKu1ScNXZWFUiA97fbKr9gMMeM96MqGIQWmDZZMgvohhC39.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/b2tG3kAbxNhO4TAG28nitYltYHc9Dz-lrwPSNo6_j_3feGMgf5rzVsJGwQM3FQ9uwmvuFeZcwD4RwRB8FRFKZRbXFD88FDMDFRyqFQI3jRqXwyG8iemydWF3dasTZc88SKoRdhXCHKoXZABlSagzie8c-AmkOcFzdPJsj14ydcszdKu1ScNXZWFUiA97fbKr9gMMeM96MqGIQWmDZZMg8E0hC39.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -338,13 +338,19 @@ durationSlider1Changed(event,ui);
     <div class="clearfix colelem" id="pppu356"><!-- group -->
      <div class="clearfix grpelem" id="ppu356"><!-- column -->
       <div class="clearfix colelem" id="pu356"><!-- group -->
-       <div class="rounded-corners clearfix grpelem" id="u356"><!-- group -->
-        <div class="clearfix grpelem" id="pu357"><!-- column -->
-         <div class="colelem" id="u357"><!-- custom html -->
-          <input id="searchInput2" placeholder="enter the name of an artist and a song here.." style="width:300px; height:25px"/>
+       <div class="rounded-corners clearfix grpelem" id="u356"><!-- column -->
+        <div class="position_content" id="u356_position_content">
+         <div class="clearfix colelem" id="pu357"><!-- group -->
+          <div class="grpelem" id="u357"><!-- custom html -->
+           <input id="artistInput" placeholder="enter the name of an artist.." style="width:200px; height:25px"/>
 </div>
-         <div class="colelem" id="u364"><!-- custom html -->
-          <div id="durationSlider2"></div>
+          <div class="grpelem" id="u434"><!-- custom html -->
+           <input id="songInput" placeholder="enter the name of a song.." style="width:200px; height:25px"/>
+</div>
+         </div>
+         <div class="clearfix colelem" id="pu364"><!-- group -->
+          <div class="grpelem" id="u364"><!-- custom html -->
+           <div id="durationSlider2"></div>
 
 <script>
 $( "#durationSlider2" ).slider({
@@ -358,17 +364,19 @@ durationSlider2Changed(event,ui);
 </script>
 
 </div>
-        </div>
-        <div class="Button rounded-corners clearfix grpelem" id="buttonu359"><!-- container box -->
-         <div class="clearfix grpelem" id="u362-4"><!-- content -->
-          <p>Search</p>
-         </div>
-         <div class="clip_frame grpelem" id="u360"><!-- image -->
-          <img class="block" id="u360_img" src="images/search.png" data-hidpi-src="images/search_2x.png" alt="" width="18" height="20"/>
+          <div class="Button rounded-corners clearfix grpelem" id="buttonu359"><!-- container box -->
+           <div class="clearfix grpelem" id="u362-4"><!-- content -->
+            <p>Search</p>
+           </div>
+           <div class="clip_frame grpelem" id="u360"><!-- image -->
+            <img class="block" id="u360_img" src="images/search.png" data-hidpi-src="images/search_2x.png" alt="" width="18" height="20"/>
+           </div>
+          </div>
          </div>
         </div>
        </div>
        <div class="grpelem" id="u363"><!-- rasterized frame --></div>
+       <div class="grpelem" id="u436"><!-- rasterized frame --></div>
        <div class="clearfix grpelem" id="u366-4"><!-- content -->
         <p>adjust the duration of your playlist</p>
        </div>
