--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,7 +11,7 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?274375772" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?155938773" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -22,7 +22,7 @@ var __adobewebfontsappname__ = "muse";
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/asap:n7,n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/l-hcL4FH8_U8T6X-sZhyPmMxOkaBv4Bj0JalyukjHo9feGMgf5rzVsJGwQM3FQ9uwmvuFeZcwD4RwRB8FRFKZRbXFD88FDMDFRyqFQI3jRqXwyG8iemydWF3dasTZc88SKoRdhXCHKoXZABlSagzie8c-AmkOcFzdPJsj14ydcszdKu1ScNXZWFUiA97fbKr9gMMeM96MqGIQWmDZZMg1GhaC39.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/75CgfnRu5g0ubhbCH-hOC6UawV7D0S5YjL_3m5SmdljfeGMgf5rzVsJGwQM3FQ9uwmvuFeZcwD4RwRB8FRFKZRbXFD88FDMDFRyqFQI3jRqXwyG8iemydWF3dasTZc88SKoRdhXCHKoXZABlSagzie8c-AmkOcFzdPJsj14ydcszdKu1ScNXZWFUiA97fbKr9gMMeM96MqGIQWmDZZMg_ZfaC39.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -30,7 +30,6 @@ var __adobewebfontsappname__ = "muse";
 </script>
     <!--custom head HTML-->
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
@@ -632,28 +631,27 @@ tempoSliderChanged(event,ui);
    $(document).ready(function() { try {
 (function(){var a={},b=function(a){if(a.match(/^rgb/))return a=a.replace(/\s+/g,"").match(/([\d\,]+)/gi)[0].split(","),(parseInt(a[0])<<16)+(parseInt(a[1])<<8)+parseInt(a[2]);if(a.match(/^\#/))return parseInt(a.substr(1),16);return 0};(function(){$('link[type="text/css"]').each(function(){var b=($(this).attr("href")||"").match(/\/?css\/([\w\-]+\.css)\?(\d+)/);b&&b[1]&&b[2]&&(a[b[1]]=b[2])})})();(function(){$("body").append('<div class="version" style="display:none; width:1px; height:1px;"></div>');
 for(var c=$(".version"),d=0;d<Muse.assets.required.length;){var f=Muse.assets.required[d],g=f.match(/([\w\-\.]+)\.(\w+)$/),k=g&&g[1]?g[1]:null,g=g&&g[2]?g[2]:null;switch(g.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");c.addClass(k);var g=b(c.css("color")),h=b(c.css("background-color"));g!=0||h!=0?(Muse.assets.required.splice(d,1),"undefined"!=typeof a[f]&&(g!=a[f]>>>24||h!=(a[f]&16777215))&&Muse.assets.outOfDate.push(f)):d++;c.removeClass(k);break;case "js":k.match(/^jquery-[\d\.]+/gi)&&
-typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();
-/* body */
+typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
-$('#u124-bw').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[null,0]},{"in":[0,Infinity],"speed":[null,0]}]);/* scroll effect */
+$('#u124-bw').registerPositionScrollEffect([{"speed":[null,0],"in":[-Infinity,0]},{"speed":[null,0],"in":[0,Infinity]}]);/* scroll effect */
 Muse.Utils.resizeHeight()/* resize height */
-$('#u149').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u132-4').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u158-4').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u159-4').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u160-4').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u156-4').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u161').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u162').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u163').registerPositionScrollEffect([{"in":[-Infinity,36],"speed":[0,0]},{"in":[36,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u149').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u132-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u158-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u159-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u160-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u156-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u161').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
 Muse.Utils.initWidget('#pamphletu389', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu389 */
-$('#pamphletu389').registerPositionScrollEffect([{"in":[-Infinity,731.9],"speed":[0,0]},{"in":[731.9,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u380').registerPositionScrollEffect([{"in":[-Infinity,732],"speed":[0,0]},{"in":[732,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u380').registerOpacityScrollEffect([{"in":[-Infinity,732],"fade":0,"opacity":0},{"in":[732,732],"opacity":0},{"in":[732,Infinity],"fade":52.55,"opacity":100}]);/* scroll effect */
-$('#u379-4').registerPositionScrollEffect([{"in":[-Infinity,731.95],"speed":[0,0]},{"in":[731.95,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u379-4').registerOpacityScrollEffect([{"in":[-Infinity,731.95],"fade":0,"opacity":0},{"in":[731.95,731.95],"opacity":0},{"in":[731.95,Infinity],"fade":51.6,"opacity":100}]);/* scroll effect */
+$('#pamphletu389').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,731.9]},{"speed":[0,0],"in":[731.9,Infinity]}]);/* scroll effect */
+$('#u380').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,732]},{"speed":[0,0],"in":[732,Infinity]}]);/* scroll effect */
+$('#u380').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,732],"fade":0},{"opacity":0,"in":[732,732]},{"opacity":100,"in":[732,Infinity],"fade":52.55}]);/* scroll effect */
+$('#u379-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,731.95]},{"speed":[0,0],"in":[731.95,Infinity]}]);/* scroll effect */
+$('#u379-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,731.95],"fade":0},{"opacity":0,"in":[731.95,731.95]},{"opacity":100,"in":[731.95,Infinity],"fade":51.6}]);/* scroll effect */
 Muse.Utils.initWidget('#pamphletu291', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu291 */
 Muse.Utils.initWidget('#pamphletu329', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu329 */
 Muse.Utils.initWidget('#pamphletu498', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu498 */
